--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,11 +1,11 @@
 ---
-name: Checks 
+name: Checks
 
 on: [push]
 
-jobs: 
+jobs:
   test-lint:
-    name: Test and Lint 
+    name: Test and Lint
     runs-on: ubuntu-24.04
     steps:
       - name: Login to Docker Hub
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Test
-        run: docker compose run --rm app sh -c "python manage.py test" 
+        run: docker compose run --rm app sh -c "python managa.py wait_for_db && python manage.py test"
       - name: Lint
         run: docker compose run --rm app sh -c "flake8"
 
